# neit

./: Cargo.toml  LICENSE  README.md  SYNTAX.md  joyjoy  nulibc.c  nulibc.h  output  output.c  t.nsc  tst.nsc
.github/workflows/: merge.yml  rust.yml
examples/: greet.nsc
nr/: nrun
sam/: _.c  _.out  grm  main.nsc  project.conf
sam2/: main.nsc  project.conf
src/: build.rs  cli.rs  codegen.rs  err.rs  grm.rs  help.rs  lex.rs  main.rs  nrunp.rs  nulibc.rs  p.rs  p2.rs  p3.rs  run.rs
src/compilers/: genasm_lin.rs  genasm_win.rs
src/compilers/llvm/: c.rs
src/ntune/: ntune.rs
src/utils/: cond_evaluator.rs  token.rs  types.rs
